--- a/GUI_Prototype02/MainMenuForm.resx
+++ b/GUI_Prototype02/MainMenuForm.resx
@@ -1196,6 +1196,9 @@
         RJPWgBrfL0PfvUvQQOxC5B7VCd2W9FoQzs24DPUc1SGVpGP51ZBDIeTQgZFTQmSVbSCyP//Z
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>196, 6</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>33</value>
   </metadata>
